# django-vercel-boilerplate

./: .pdm-python  README.md  build_files.sh  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
doc/: references.txt  terminal-history.txt
envs/: .env
http/: admin.http  api.http  auth.http
src/: db.sqlite3
src/django_app/: asgi.py  config.py  settings.py  urls.py  wsgi.py
src/django_app/modules/home/: views.py
src/django_app/modules/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
src/django_app/modules/tasks/migrations/: 0001_initial.py
src/templates/: layouts.html
src/templates/home/: index.html
templates/: layouts.html
templates/home/: index.html
